--- a/packages.config
+++ b/packages.config
@@ -4,5 +4,7 @@
   <package id="angularjs" version="1.4.8" targetFramework="net45" />
   <package id="AngularJS.Core" version="1.4.7" targetFramework="net45" />
   <package id="AngularJS.Route" version="1.4.7" targetFramework="net45" />
+  <package id="bootstrap" version="3.3.6" targetFramework="net45" />
   <package id="Firebase.js" version="2.1.2" targetFramework="net45" />
+  <package id="jQuery" version="1.9.1" targetFramework="net45" />
 </packages>
